tests/errors/runtime/undefined_var.zy
// Variables inside functions cannot access outer scope (isolated scope)
outer = "I exist outside"

access_outer() {
    >> outer ¶
}

access_outer()
